[gd_scene load_steps=3 format=3 uid="uid://dp1x53i081wvs"]

[ext_resource type="Script" path="res://menu.gd" id="1_ga1oh"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dme2o"]

[node name="Menu" type="Control"]
layout_mode = 3
anchor_left = 0.001
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -0.152
offset_right = -1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ga1oh")

[node name="newGame" type="Button" parent="."]
layout_mode = 0
offset_left = 430.0
offset_top = 160.0
offset_right = 589.0
offset_bottom = 203.0
text = "New Game"

[node name="continue" type="Button" parent="."]
layout_mode = 0
offset_left = 434.0
offset_top = 212.0
offset_right = 588.0
offset_bottom = 248.0
text = "Continue"

[node name="options" type="Button" parent="."]
layout_mode = 0
offset_left = 435.0
offset_top = 262.0
offset_right = 569.0
offset_bottom = 303.0
text = "Options"

[node name="exit" type="Button" parent="."]
layout_mode = 0
offset_left = 394.0
offset_top = 333.0
offset_right = 653.0
offset_bottom = 424.0
text = "Exit"

[node name="optionsMenu" type="ColorRect" parent="."]
visible = false
self_modulate = Color(0.247059, 0.247059, 0.247059, 1)
layout_mode = 0
offset_right = 1147.0
offset_bottom = 646.0

[node name="fullscreen" type="CheckBox" parent="optionsMenu"]
self_modulate = Color(0.772549, 0.721569, 0, 1)
material = SubResource("ShaderMaterial_dme2o")
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -105.5
offset_top = 320.0
offset_right = -81.5
offset_bottom = 344.0
grow_horizontal = 2

[node name="fullscreenLabel" type="Label" parent="optionsMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 22.5
offset_top = 323.0
offset_right = 101.5
offset_bottom = 346.0
grow_horizontal = 2
text = "Fullscreen"

[node name="back" type="Button" parent="optionsMenu"]
layout_mode = 0
offset_left = 464.0
offset_top = 375.0
offset_right = 677.0
offset_bottom = 420.0
text = "Back"

[node name="HSlider" type="HSlider" parent="optionsMenu"]
layout_mode = 0
offset_left = 464.0
offset_top = 265.0
offset_right = 605.0
offset_bottom = 287.0
min_value = -100.0
max_value = 0.0

[node name="soundNumber" type="Label" parent="optionsMenu/HSlider"]
layout_mode = 0
offset_left = 65.0
offset_top = 14.0
offset_right = 72.0
offset_bottom = 37.0
theme_override_font_sizes/font_size = 11
text = "0"

[node name="soundLabel" type="Label" parent="optionsMenu"]
layout_mode = 0
offset_left = 630.0
offset_top = 265.0
offset_right = 679.0
offset_bottom = 288.0
text = "Sound"

[connection signal="pressed" from="options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
[connection signal="toggled" from="optionsMenu/fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="pressed" from="optionsMenu/back" to="." method="_on_back_pressed"]
[connection signal="value_changed" from="optionsMenu/HSlider" to="." method="_on_h_slider_value_changed"]
